--- a/index.html
+++ b/index.html
@@ -29,6 +29,21 @@
 		</div>
 
 		<div class="content">
+			<div class="title">
+				Summary
+			</div>
+			<div class="title-content">
+
+				<div class="context">
+					An enthusiastic and focused individual with the ability to complete tasks accurately in a
+					fast-paced environment.
+					Resourceful and articulate to finding resolution to any challenges may be faced with.
+					Strong collaborator with management and customer services experiences and have a passion for
+					details.
+				</div>
+				
+			</div>
+
 
 			<div class="title">
 				Work History
